--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -6,7 +6,9 @@ services:
       dockerfile: Dockerfile
     container_name: nuxt-app
     volumes:
-      - ./src:/app:delegated
+      - ./src:/app
+      - /app/node_modules
+    command: npm run dev
     ports:
       - "3000:3000"
     environment:
