--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "timestream-frontend",
   "version": "1.0.0",
@@ -11,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.33.1",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
@@ -18,9 +18,13 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
-    "@nuxt/postcss8": "^1.1.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@types/node": "^16.11.7",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.4"
   }
 }
