--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   nuxt:
     build:
@@ -6,7 +5,7 @@ services:
       dockerfile: Dockerfile
     container_name: nuxt-app
     volumes:
-      - ./src:/app
+      - .:/app
       - /app/node_modules
     command: npm run dev
     ports:
